--- a/TitlePage.tex
+++ b/TitlePage.tex
@@ -2,29 +2,30 @@
 \begin{center}
 \noindent {\large \textbf{UNIVERSITÉ DE LYON - LUMIÈRE LYON 2}} \\
 \vspace*{0.3cm}
-\noindent {\LARGE \textbf{ECOLE DOCTORALE INFOMATHS}} \\
+\noindent {\large \textbf{ECOLE DOCTORALE INFORMATIQUE ET MATHÉMATIQUES}} \\
 %\noindent \textbf{SCIENCES ET TECHNOLOGIES DE L'INFORMATION \\ ET DE LA COMMUNICATION} \\
 \vspace*{0.5cm}
-\noindent \Huge \textbf{P H D\ \ T H E S I S} \\
+\noindent \LARGE \textbf{ T H È S E} \\
 \vspace*{0.3cm}
-\noindent \large {to obtain the title of} \\
+\noindent \large {pour obtenir le grade de } \\
 \vspace*{0.3cm}
-\noindent \LARGE \textbf{PhD of Computer Science} \\
+\noindent \LARGE \textsc{DOCTEUR EN INFORMATIQUE} \\
 \vspace*{0.3cm}
-\noindent \Large of the University of Lyon - Lumière 2\\
+%\noindent \Large of the University of Lyon - Lumière 2\\
 %\noindent \Large \textbf{Specialty : \textsc{Computer Science}}\\
-\vspace*{0.4cm}
-\noindent \large {Defended by\\}
+\vspace*{0.2cm}
+\noindent \large {présentée par\\}
 \noindent \LARGE Edmundo-Pavel \textsc{Soriano-Morales} \\
-\vspace*{0.8cm}
+\vspace*{0.4cm}
 \noindent {\Huge \textbf{Hypergraphs and information fusion for term representation enrichment. Applications to named entity recognition and word sense disambiguation}} \\
-\vspace*{0.8cm}
-\noindent \Large Thesis Advisor: Sabine \textsc{Loudcher} and Julien \textsc{Ah-Pine} \\
+\vspace*{0.5cm}
+\noindent \Large préparée au sein du laboratoire \textsc{ERIC} \\
+
+\vspace*{0.1cm}
+\noindent \Large sous la direction de Sabine \textsc{Loudcher} et Julien \textsc{Ah-Pine} \\
 
 \vspace*{0.2cm}
-\noindent \Large prepared at Université de Lyon 2, \textsc{ERIC} Laboratory \\
-\vspace*{0.2cm}
-\noindent \large defended on  \\
+\noindent \large Soutenue publiquement le 19 Janvier  2018 devant le jury~:\\
 \vspace*{0.1cm}
 \end{center}
 \noindent \large \textbf{Jury :} \\
